--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
             - '.:/var/www/html'
             - '.docker/supervisord.conf:/etc/supervisor/conf.d/1-supervisord.conf'
         networks:
-            - sail
+            - garment-network
         depends_on:
             - mysql
         healthcheck:
@@ -45,10 +45,11 @@ services:
             MYSQL_PASSWORD: '${DB_PASSWORD}'
             MYSQL_ALLOW_EMPTY_PASSWORD: 1
         volumes:
-            - 'sail-mysql:/var/lib/mysql'
+            - 'garment-mysql:/var/lib/mysql'
             - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
+            - '.docker/database.sql:/docker-entrypoint-initdb.d/11-database.sql'
         networks:
-            - sail
+            - garment-network
         healthcheck:
             test:
                 - CMD
@@ -58,8 +59,10 @@ services:
             retries: 3
             timeout: 5s
 networks:
-    sail:
+    garment-network:
+        name: garment-network
         driver: bridge
 volumes:
-    sail-mysql:
+    garment-mysql:
+        name: garment-mysql
         driver: local
